# GhostTimer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  rustfmt.toml
.cargo/: config.toml
specs/001-i-want-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-i-want-to/contracts/: config_interface.rs  timer_interface.rs  window_interface.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/models/: app_state.rs  config.rs  display.rs  timer.rs
src/services/: background_detector.rs  config_manager.rs  hotkey_manager.rs  timer_service.rs  window_manager.rs
tests/contract/: test_config_interface.rs  test_timer_interface.rs  test_window_interface.rs
tests/integration/: test_hover_behavior.rs  test_position_persistence.rs  test_timer_transparency.rs
